Completed Day 01 deliverables

--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
     <head>
         <title>JS Challenge</title>
         <link rel="stylesheet" href="./static/css/stylesheet.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
     <body>
+        <div class="color_options">
+            <div class="color" id="black_01">
+                <img src="./static/images/ia-logo-dot-black.png" alt="black">
+            </div>
+            <div class="color" id="black_02">
+                <img src="./static/images/ia-logo-dot-black.png" alt="black">
+            </div>
+            <div class="color" id="blue">
+                <img src="./static/images/ia-logo-dot-blue.png" alt="blue">
+            </div>
+            <div class="color" id="green">
+                <img src="./static/images/ia-logo-dot-green.png" alt="green">
+            </div>
+            <div class="color" id="red">
+                <img src="./static/images/ia-logo-dot-red.png" alt="red">
+            </div>
+        </div>
 
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <!-- <div class="starting_image">
+            <img src="./static/images/ia-logo-back.png">
+        </div> -->
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script src="./static/js/app.js"></script>
     </body>
 </html>
