Added reset button and align image to the center

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <link rel="stylesheet" href="./static/css/stylesheet.css">
     </head>
     <body>
+        <!-- Top container that includes the reset button and the color options.-->
+        <!-- Reset button -->
+        <div class="reset">
+            <button id="reset_button"> Reset Challenge </button>
+        </div>
+    
+        <!-- Color options the user must chose from to insert into the correct area. -->
         <div class="color_options">
             <div class="color" id="black_01">
                 <img src="./static/images/ia-logo-dot-black.png" alt="black">
@@ -23,9 +30,11 @@
             </div>
         </div>
 
-        <!-- <div class="starting_image">
+        <!-- Starting blank image -->
+        <div class="starting_image">
             <img src="./static/images/ia-logo-back.png">
-        </div> -->
+        </div>       
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
