--- a/index.html
+++ b/index.html
@@ -13,27 +13,40 @@
     
         <!-- Color options the user must chose from to insert into the correct area. -->
         <div class="color_options">
+            <div class="color" id="blue">
+                <img src="./static/images/ia-logo-dot-blue.png" alt="blue">
+            </div>
+            <div class="color" id="red">
+                <img src="./static/images/ia-logo-dot-red.png" alt="red">
+            </div>
+            <div class="color" id="green">
+                <img src="./static/images/ia-logo-dot-green.png" alt="green">
+            </div>
             <div class="color" id="black_01">
                 <img src="./static/images/ia-logo-dot-black.png" alt="black">
             </div>
             <div class="color" id="black_02">
                 <img src="./static/images/ia-logo-dot-black.png" alt="black">
             </div>
-            <div class="color" id="blue">
-                <img src="./static/images/ia-logo-dot-blue.png" alt="blue">
-            </div>
-            <div class="color" id="green">
-                <img src="./static/images/ia-logo-dot-green.png" alt="green">
-            </div>
-            <div class="color" id="red">
-                <img src="./static/images/ia-logo-dot-red.png" alt="red">
-            </div>
         </div>
 
-        <!-- Starting blank image -->
-        <div class="starting_image">
+        <!-- Image -->
+        <!-- <div class="starting_image">
             <img src="./static/images/ia-logo-back.png">
-        </div>       
+        </div>        -->
+
+        <!-- Image Grid  -->
+        <div class="grid_parent">
+            <div class="grid_child">1</div>
+            <div class="grid_child">2</div>
+            <div class="grid_child">3</div>
+            <div class="grid_child">4</div>
+            <div class="grid_child">5</div>
+            <div class="grid_child">6</div>
+            <div class="grid_child">7</div>
+            <div class="grid_child">8</div>
+            <div class="grid_child">9</div>
+        </div>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
