Working on grid function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <img src="./static/images/ia-logo-back.png">
         </div>        -->
 
-        <!-- Image Grid  -->
+        <!-- Image Grid -->
+        <!-- Resources: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
         <div class="grid_parent">
             <div class="grid_child">1</div>
             <div class="grid_child">2</div>
