--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
             </div>
         </div>
 
-        <!-- Image -->
-        <!-- <div class="starting_image">
+        <!-- Logo -->
+        <div class="starting_image">
             <img src="./static/images/ia-logo-back.png">
-        </div>        -->
+        </div>       
 
         <!-- Image Grid -->
-        <!-- Resources: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
+        <!-- Reference: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
         <div class="grid_parent">
-            <div class="grid_child">1</div>
-            <div class="grid_child">2</div>
-            <div class="grid_child">3</div>
-            <div class="grid_child">4</div>
-            <div class="grid_child">5</div>
-            <div class="grid_child">6</div>
-            <div class="grid_child">7</div>
-            <div class="grid_child">8</div>
-            <div class="grid_child">9</div>
+            <div class="grid_child" id="one">1</div>
+            <div class="grid_child" id="two">2</div>
+            <div class="grid_child" id="three">3</div>
+            <div class="grid_child" id="four">4</div>
+            <div class="grid_child" id="five">5</div>
+            <div class="grid_child" id="six">6</div>
+            <div class="grid_child" id="seven">7</div>
+            <div class="grid_child" id="eight">8</div>
+            <div class="grid_child" id="nine">9</div>
         </div>
 
 
