Working on congratulation message

--- a/index.html
+++ b/index.html
@@ -30,28 +30,30 @@
             </div>
         </div>
 
-        <!-- Logo -->
-        <div class="starting_image">
-            <img src="./static/images/ia-logo-back.png">
-        </div>       
+        <div class="container">
+            <!-- Logo -->
+            <div class="starting_image">
+                <img src="./static/images/ia-logo-back.png">
+            </div>       
 
-        <!-- Image Grid -->
-        <!-- Reference: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
-        <div class="grid_parent">
-            <div class="grid_child" id="one">1</div>
-            <div class="grid_child" id="two">2</div>
-            <div class="grid_child" id="three">3</div>
-            <div class="grid_child" id="four">4</div>
-            <div class="grid_child" id="five">5</div>
-            <div class="grid_child" id="six">6</div>
-            <div class="grid_child" id="seven">7</div>
-            <div class="grid_child" id="eight">8</div>
-            <div class="grid_child" id="nine">9</div>
+            <!-- Image Grid -->
+            <!-- Reference: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
+            <div class="grid_parent">
+                <div class="grid_child" id="one">1</div>
+                <div class="grid_child" id="two">2</div>
+                <div class="grid_child" id="three">3</div>
+                <div class="grid_child" id="four">4</div>
+                <div class="grid_child" id="five">5</div>
+                <div class="grid_child" id="six">6</div>
+                <div class="grid_child" id="seven">7</div>
+                <div class="grid_child" id="eight">8</div>
+                <div class="grid_child" id="nine">9</div>
+            </div>
         </div>
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script src="./static/js/app.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+        <script  type="text/javascript" src="./static/js/app.js"></script>
     </body>
 </html>
