--- a/index.html
+++ b/index.html
@@ -3,57 +3,55 @@
     <head>
         <title>JS Challenge</title>
         <link rel="stylesheet" href="./static/css/stylesheet.css">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     </head>
     <body>
-        <!-- Top container that includes the reset button and the color options.-->
-        <!-- Reset button -->
+        <!-- Button Options -->
         <div class="reset">
             <button id="reset_button"> Reset Challenge </button>
         </div>
-    
+
+        <div class="message"></div>
+
         <!-- Color options the user must chose from to insert into the correct area. -->
         <div class="color_options">
-            <div class="color" id="blue">
+            <div class="color">
                 <img src="./static/images/ia-logo-dot-blue.png" alt="blue">
             </div>
-            <div class="color" id="red">
+            <div class="color">
                 <img src="./static/images/ia-logo-dot-red.png" alt="red">
             </div>
-            <div class="color" id="green">
+            <div class="color">
                 <img src="./static/images/ia-logo-dot-green.png" alt="green">
             </div>
-            <div class="color" id="black_01">
-                <img src="./static/images/ia-logo-dot-black.png" alt="black">
+            <div class="color">
+                <img src="./static/images/ia-logo-dot-black.png" alt="black_01">
             </div>
-            <div class="color" id="black_02">
-                <img src="./static/images/ia-logo-dot-black.png" alt="black">
+            <div class="color">
+                <img src="./static/images/ia-logo-dot-black.png" alt="black_02">
             </div>
         </div>
 
         <div class="container">
             <!-- Logo -->
-            <div class="starting_image">
+            <!-- <div class="starting_image">
                 <img src="./static/images/ia-logo-back.png">
-            </div>       
+                </div>        -->
 
             <!-- Image Grid -->
-            <!-- Reference: https://www.google.com/search?q=create+a+3x3+grid+html+css&oq=create+a+3x3+grid+html+css&aqs=chrome..69i57j33i160l2.9353j0j4&sourceid=chrome&ie=UTF-8#kpvalbx=_lYW-Yt2sOeCpptQPoP--kAg16 -->
             <div class="grid_parent">
                 <div class="grid_child" id="one">1</div>
                 <div class="grid_child" id="two">2</div>
                 <div class="grid_child" id="three">3</div>
                 <div class="grid_child" id="four">4</div>
                 <div class="grid_child" id="five">5</div>
-                <div class="grid_child" id="six">6</div>
-                <div class="grid_child" id="seven">7</div>
-                <div class="grid_child" id="eight">8</div>
-                <div class="grid_child" id="nine">9</div>
+                <!-- <div class="grid_child" id="six">6</div> -->
+                <!-- <div class="grid_child" id="seven">7</div> -->
+                <!-- <div class="grid_child" id="eight">8</div> -->
+                <!-- <div class="grid_child" id="nine">9</div> -->
             </div>
         </div>
-
-
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script  type="text/javascript" src="./static/js/app.js"></script>
     </body>
 </html>
