--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
         <!-- Color options the user must chose from to insert into the correct area. -->
         <div class="color_options">
-            <div class="color">
-                <img src="./static/images/ia-logo-dot-blue.png" alt="blue">
+            <div class="color" id="blue">
+                <img src="./static/images/ia-logo-dot-blue.png" id="blue_dot">
             </div>
-            <div class="color">
+            <div class="color" id="red">
                 <img src="./static/images/ia-logo-dot-red.png" alt="red">
             </div>
-            <div class="color">
+            <div class="color" id="green">
                 <img src="./static/images/ia-logo-dot-green.png" alt="green">
             </div>
-            <div class="color">
+            <div class="color" id="black_01">
                 <img src="./static/images/ia-logo-dot-black.png" alt="black_01">
             </div>
-            <div class="color">
+            <div class="color" id="black_02">
                 <img src="./static/images/ia-logo-dot-black.png" alt="black_02">
             </div>
         </div>
@@ -41,15 +41,11 @@
 
             <!-- Image Grid -->
             <div class="grid_parent">
-                <div class="grid_child" id="one">1</div>
-                <div class="grid_child" id="two">2</div>
-                <div class="grid_child" id="three">3</div>
-                <div class="grid_child" id="four">4</div>
-                <div class="grid_child" id="five">5</div>
-                <!-- <div class="grid_child" id="six">6</div> -->
-                <!-- <div class="grid_child" id="seven">7</div> -->
-                <!-- <div class="grid_child" id="eight">8</div> -->
-                <!-- <div class="grid_child" id="nine">9</div> -->
+                <div class="grid_child" id="one"></div>
+                <div class="grid_child" id="two"></div>
+                <div class="grid_child" id="three"></div>
+                <div class="grid_child" id="four"></div>
+                <div class="grid_child" id="five"></div>
             </div>
         </div>
         <script  type="text/javascript" src="./static/js/app.js"></script>
